# rust-on-nails

./: Cargo.toml  Earthfile
.devcontainer/: Dockerfile
crates/asset-pipeline/: Cargo.toml  build.rs  index.ts  package-lock.json  package.json
crates/axum-server/: Cargo.toml
crates/axum-server/src/: main.rs
crates/db/: Cargo.toml
crates/db/migrations/: 20240219045631_user_tables.sql
crates/db/queries/: users.sql
crates/db/src/: lib.rs
crates/grpc-api/: Cargo.toml  build.rs
crates/ui-components/: Cargo.toml
crates/ui-components/src/: layout.rs  users.rs
