[package]
name = "axum-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
db = { version = "0.1.0", path = "../db" }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", default-features = false, features = ["macros", "fs", "rt-multi-thread"] }
ui-components = { version = "0.1.0", path = "../ui-components" }
validator = { version = "0.16.1", features = ["derive"] }
