[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cornucopia_async = "0.6.0"
deadpool-postgres = "0.12.1"
futures = "0.3.30"
postgres-types = "0.2.6"
rustls = "0.22.2"
rustls-pki-types = "1.3.0"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.10"
tokio-postgres-rustls = "0.11.1"
webpki-roots = "0.26.1"
