[package]
name = "grpc-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.3"
serde = { version = "1.0.197", features = ["derive"] }
tonic = { version = "0.11.0", features = ["tls", "transport"] }

[build-dependencies]
tonic-build = "0.11.0"
